<resources>
    <string name="app_name">Civitas Dei</string>

    <string name="title_notifications">Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="new_search">New Search</string>
    <string name="church_profile_result">Church Profile Result</string>
    <string name="title_discover">Discover</string>
    <string name="title_feed">Feed</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_my_churches">My Churches</string>
    <string name="title_attendants">Attendants:</string>
    <string name="title_likes">Likes:</string>
    <string name="title_last_name">Last name</string>
    <string name="title_first_name">First name</string>
    <string name="title_create_account">Create Account</string>
    <string name="Title_e_mail">E-mail</string>
    <string name="title_password">Password</string>
    <string name="title_church">Church</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_favorite_bible_verse">Favorite Bible Verse</string>
    <string name="title_apply">Apply</string>
    <string name="Title_full_name">Full Name</string>
    <string name="title_activity_registration_data">RegistrationData</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_postee">Postee Title</string>
    <string name="title_post">Post Title</string>
    <string name="title_church_mission">Church Mission</string>
</resources>
