<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.csci448.malagon.civitasdei.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" >
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_attendantProfileFragment"
            app:destination="@id/attendantProfileFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
        <action
            android:id="@+id/action_navigation_home_to_churchProfileFragment"
            app:destination="@id/churchProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.csci448.malagon.civitasdei.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.csci448.malagon.civitasdei.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.csci448.malagon.civitasdei.ui.search.SearchFragment"
        android:label="SearchFragment" >
        <action
            android:id="@+id/action_searchFragment_to_resultListFragment"
            app:destination="@id/churchProfileListFragment" />
        <action
            android:id="@+id/action_searchFragment_to_navigation_home"
            app:destination="@id/navigation_discover" />
    </fragment>
    <fragment
        android:id="@+id/churchProfileFragment"
        android:name="com.csci448.malagon.civitasdei.ui.church_profile.ChurchProfileFragment"
        android:label="ChurchProfileFragment" >
        <argument
            android:name="churchId"
            app:argType="java.util.UUID" />
        <action
            android:id="@+id/action_churchProfileFragment_to_navigation_home"
            app:destination="@id/navigation_discover" />
    </fragment>
    <fragment
        android:id="@+id/churchProfileListFragment"
        android:name="com.csci448.malagon.civitasdei.ui.church_profile_list.ChurchProfileListFragment"
        android:label="ChurchProfileListFragment">
        <action
            android:id="@+id/action_resultListFragment_to_churchProfileFragment"
            app:destination="@id/churchProfileFragment" />
        <action
            android:id="@+id/action_resultListFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_resultListFragment_to_navigation_home"
            app:destination="@id/navigation_discover" />
    </fragment>
    <fragment
        android:id="@+id/attendantProfileFragment"
        android:name="com.csci448.malagon.civitasdei.ui.attendant_profile.AttendantProfileFragment"
        android:label="AttendantProfileFragment" >
        <action
            android:id="@+id/action_attendantProfileFragment_to_navigation_home2"
            app:destination="@id/navigation_discover"
            app:enterAnim="@anim/fragment_open_exit" />
        <action
            android:id="@+id/action_attendantProfileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.csci448.malagon.civitasdei.ui.attendant_profile.EditProfileFragment"
        android:label="edit_profile_fragment"
        tools:layout="@layout/edit_profile_fragment" >
        <action
            android:id="@+id/action_editProfileFragment_to_attendantProfileFragment"
            app:destination="@id/attendantProfileFragment" />
    </fragment>
</navigation>